--- a/css/small.css
+++ b/css/small.css
@@ -16,6 +16,12 @@ header {
     z-index: 1;
     width: 100%;
 }
+.logo {
+    width: 100px;
+    margin: 1rem;
+    background-color: #EBEBEB;
+    border-radius: 50%;
+}
 nav {
     text-align: right;
     width: 100%;
