Fixed directory js

--- a/css/medium.css
+++ b/css/medium.css
@@ -64,7 +64,8 @@
         width: 25px;
     }
     form {
-        margin: auto;
+        width: 60%;
+        margin: 1rem auto;
     }
 
     /*Directory*/
